crates/agent-tui/tests/snapshots/render_snapshots__context_indicator_narrow.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"context_indicator_narrow\", &s, NARROW, H)"
---
› Explique la boucle d'agent et montre
  le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.













────────────────────────────────────────
›
────────────────────────────────────────
gpt-5 [high] · pyx  ctrl+c twice to quit
