crates/agent-tui/tests/snapshots/render_snapshots__error_block.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"error_block\", &s, W, H)"
---
› Continue

  ✗ session: io: read-only file system

















────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
