crates/agent-tui/tests/snapshots/render_snapshots__exec_error.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"exec_error\", &s, W, H)"
---
› Compile le workspace

● Run(cargo build --workspace)
  ⎿ error[E0308]: mismatched types
    ... +2 lines















────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
