crates/agent-tui/tests/snapshots/render_snapshots__exec_running.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"exec_running\", &s, W, H)"
---
› Compile le workspace

● Run(cargo build --workspace)















• Working (7s • esc to interrupt)

────────────────────────────────────────────────────────────────────────────────
› Ask Pyxis to do anything
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
