crates/agent-tui/tests/snapshots/render_snapshots__exec_success.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"exec_success\", &s, W, H)"
---
› Compile le workspace

● Run(cargo build --workspace)
  ⎿ Ran · 2 lines
















────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
  gpt-5 · pyxis
