crates/agent-tui/tests/snapshots/render_snapshots__footer_shortcut_overlay.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"footer_shortcut_overlay\", &s, W, H)"
---
› Explique la boucle d'agent et montre le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.







────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
  / for commands                      @ for file paths
  ctrl + j for newline                enter to send
  tab to complete                     ↑ ↓ to browse history
  ctrl + a to go to line start        ctrl + e to go to line end
  ctrl + w to delete previous word    ctrl + u to clear the input
  ctrl + t to view transcript         ctrl + c to interrupt or exit

  ? or esc to close
