crates/agent-tui/tests/snapshots/render_snapshots__footer_status_line.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"footer_status_line\", &s, W, H)"
---
› Explique la boucle d'agent et montre le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.














────────────────────────────────────────────────────────────────────────────────
› Ask Pyxis to do anything
────────────────────────────────────────────────────────────────────────────────
  gpt-5 high · pyxis
