crates/agent-tui/tests/snapshots/render_snapshots__footer_status_line_narrow.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"footer_status_line_narrow\", &s, NARROW, H)"
---
› Explique la boucle d'agent et montre
  le code

● La boucle est un Stream d'AgentEvent.


  Elle rend la main à chaque frontière.













────────────────────────────────────────
›
────────────────────────────────────────
  gpt-5 high · pyxis
