crates/agent-tui/tests/snapshots/render_snapshots__interrupted_turn.snap
---
source: crates/agent-tui/tests/render_snapshots.rs
expression: "harness::frame(\"interrupted_turn\", &s, W, H)"
---
› Lance la suite complète

● Run(cargo test --workspace)
  ⎿ Error: interrupted by user

  · interrupted














────────────────────────────────────────────────────────────────────────────────
›
────────────────────────────────────────────────────────────────────────────────
gpt-5 · pyxis · Ask for approval           ctrl+j newline · ctrl+c twice to quit
